--- a/package.json
+++ b/package.json
@@ -10,32 +10,20 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/scripts": "^0.9.5",
-    "@nuxt/ui": "^2.16.0",
-    "@nuxt/webpack-builder": "^3.11.2",
-    "@types/webpack": "^5.28.5",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vue/cli-service": "^3.3.1",
+    "@nuxt/ui": "^3",
     "adhan": "^4.4.3",
-    "blueimp-canvas-to-blob": "^3.29.0",
+    "dayjs": "^1.11",
     "dom-to-image": "^2.6.0",
-    "file-saver": "^2.0.5",
     "hijrah-date": "^1.0.3",
-    "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
-    "moment": "^2.30.1",
-    "moment-timezone": "^0.5.45",
-    "nuxt": "^3.11.2",
-    "nuxt-gtag": "^2.0.6",
-    "nuxt-swiper": "^1.2.2",
-    "nuxt-viewport": "^2.1.5",
-    "nuxt3-notifications": "^1.2.0",
-    "url-loader": "^4.1.1",
-    "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
+    "nuxt": "^4",
+    "nuxt-gtag": "^4",
+    "nuxt-swiper": "^2",
+    "vue": "^3.5",
+    "vue-router": "^4.5"
   },
   "devDependencies": {
-    "@vueuse/core": "^10.10.0",
-    "@vueuse/nuxt": "^10.10.0"
+    "@vueuse/core": "^14",
+    "@vueuse/nuxt": "^14"
   }
 }
